# cubes-attack

./: .gitignore  Cargo.toml  bacon.toml
src/: components.rs  events.rs  main.rs  systems.rs
src/gameplay/: bundles.rs  components.rs  mod.rs  states.rs  system_sets.rs  systems.rs
src/gameplay/enemies/: bundles.rs  components.rs  mod.rs  resources.rs  systems.rs
src/gameplay/player/: bundles.rs  components.rs  events.rs  mod.rs  resources.rs  systems.rs
src/gameplay/player/crumbs/: bundles.rs  components.rs  events.rs  mod.rs  systems.rs
src/gameplay/projectiles/: bundles.rs  components.rs  mod.rs  systems.rs
src/ui/: mod.rs
src/ui/menus/: components.rs  mod.rs  styles.rs
src/ui/menus/game_over_menu/: components.rs  mod.rs
src/ui/menus/game_over_menu/systems/: layout.rs
src/ui/menus/level_up_menu/: bundles.rs  components.rs  events.rs  mod.rs  styles.rs
src/ui/menus/level_up_menu/systems/: layout.rs  mod.rs
src/ui/menus/pause_menu/: mod.rs
src/ui/menus/pause_menu/systems/: layout.rs  mod.rs
src/ui/menus/systems/: interactions.rs
src/ui/pause_menu/: components.rs  macros.rs  mod.rs  styles.rs
src/ui/pause_menu/systems/: interactions.rs  layout.rs
src/ui/score/: components.rs  events.rs  mod.rs  resources.rs
src/ui/score/systems/: layout.rs  updates.rs
