[package]
name = "bevy-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.1"
bevy_prng = "0.5.2"
bevy_rand = { version = "0.5.2", features = ["wyrand"] }
rand = "0.8.5"
rand_core = "0.6.4"
